# radiochat-tui

./: .gitignore  ;  Cargo.toml  LICENSE  setup.sh
.github/workflows/: release.yml
src/: api.rs  clipboard.rs  config.rs  crypto.rs  emoji.rs  main.rs  ssh.rs  vim.rs
src/voice/: audio.rs  manager.rs  mod.rs
