[package]
name = "radiochat"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.27.0"
tui-textarea = "0.7.0"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros","rt-multi-thread","sync"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
hex = "0.4.3"
aead = "0.5.2"
