[package]
name = "eurus"
version = "0.2.2"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.27.0"
tui-textarea = "0.7.0"
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros","rt-multi-thread","sync","time"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
hex = "0.4.3"
aead = "0.5.2"
arboard = "3.6.1"
image = "0.25.9"
base64 = "0.22.1"
toml = "0.9.11"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
notify-rust = "4"
webrtc = "0.10.0"
cpal = "0.15.2"
audiopus = "0.2.0-alpha.5"
anyhow = "1.0"

[profile.release]
lto = false
codegen-units = 1
strip = true
